# rgb-cooling-hat

./: .clang-format  .gitignore  99-rgb-cooling-hat.rules  Cargo.toml  I2cDev.cc  I2cDev.hh  Makefile  README.md  TODO  i2c-pwm.service  i2c-pwm.sh  i2c-rgb.sh  i2cw.cc  i2cw_help.cc  macro.hh  pwm.sh  type.hh
AUR/: .SRCINFO  .gitignore  PKGBUILD  rgb-cooling-hat.install
i2c-oled/: Cargo.toml
i2c-oled/src/: i2c.rs  main.rs
include/: I2cDev.hh
scripts/: Makefile  config.sh  env.sh  fan.sh  i2c-fan.sh  i2c-rgb.sh  main.sh  oled.sh  rgb.sh
service/: Makefile  i2c-fan.service  rgb-cooling-hat  rgb-cooling-hat.oled.service  rgb-cooling-hat.service
src/: .gitignore  I2cDev.cc  Makefile  i2c.rs  i2cw.cc  i2cw_help.cc  main.rs
