[package]
name = "rgb-cooling-hat"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/supdrewin/rgb-cooling-hat"
description = "RGB Cooling HAT advanced utility for YB-EPV02 and it's SSD1306"
license = "MPL-2.0"
authors = ["supdrewin"]

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
i2c-linux = "0.1.2"
ssd1306 = "0.7.0"

[profile.release]
opt-level = 2
lto = "thin"
